# rasp_os_tutorial

./: Cargo.toml  Makefile  build.rs  kernel8.img
common/: color.mk.in
common/tests/: boot_test.rb  dispatch.rb  test.rb
miniterm/: Cargo.toml
miniterm/src/: main.rs
src/: console.rs  cpu.rs  driver.rs  main.rs  panic_wait.rs  print.rs  synchronization.rs
src/_arch/aarch64/: cpu.rs
src/_arch/aarch64/cpu/: boot.rs  boot.s
src/bsp/: device_driver.rs  raspberrypi.rs
src/bsp/device_driver/: bcm.rs  common.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: console.rs  driver.rs  link.ld  memory.rs
src/cpu/: boot.rs
