[package]
name = "mingo"
version = "0.4.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
tock-registers = {version = "0.7.x", default-features = false, features= ["register_types"], optional=true}

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "6.x.x" }